updated cloud api and docs
